kustomize/edge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mytbedge
  name: mytbedge
  namespace: regiona
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mytbedge
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: mytbedge
    spec:
      containers:
        - env:
            - name: CLOUD_ROUTING_KEY
              value: 106e4527-7ee0-d452-e4e3-23be0ae519f5
            - name: CLOUD_ROUTING_SECRET
              value: d4xzkygs5c1656874f9n
            - name: CLOUD_RPC_HOST
              value: demo.thingsboard.io
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://postgres.regiona.svc.kcluster.myanmarapn.com:5432/tb-edge
          image: thingsboard/tb-edge:3.4.3EDGE
          name: mytbedge
          ports:
            - containerPort: 8080
            - containerPort: 1883
            - containerPort: 5683
              protocol: UDP
            - containerPort: 5684
              protocol: UDP
            - containerPort: 5685
              protocol: UDP
            - containerPort: 5686
              protocol: UDP
            - containerPort: 5687
              protocol: UDP
            - containerPort: 5688
              protocol: UDP
          resources: 
            limits: 
              cpu: "2000m"
              memory: "2048Mi"
      restartPolicy: Always
