kustomize/edge/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    layer: edge
    io.kompose.service: mytbedge
  name: mytbedge
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "1883"
      port: 1883
      targetPort: 1883
    - name: "5683"
      port: 5683
      protocol: UDP
      targetPort: 5683
    - name: "5684"
      port: 5684
      protocol: UDP
      targetPort: 5684
    - name: "5685"
      port: 5685
      protocol: UDP
      targetPort: 5685
    - name: "5686"
      port: 5686
      protocol: UDP
      targetPort: 5686
    - name: "5687"
      port: 5687
      protocol: UDP
      targetPort: 5687
    - name: "5688"
      port: 5688
      protocol: UDP
      targetPort: 5688
  selector:
    io.kompose.service: mytbedge
  type: NodePort
