kustomize/edge/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mytbedge
  labels:
    layer: edge
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 1883
      name: tcp
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mytbedge
  labels:
    layer: edge
spec:
  hosts:
  - "*"
  gateways:
  - mytbedge
  tcp:
  - match:
     - port: 1883
    route:
    - destination:
        host: mytbedge
        port:
          number: 1883
