kustomize/edge/rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mytbedge
  labels:
    layer: edge
spec:
  host: mytbedge
  subsets:
  - name: v1
    labels:
      version: v1
